--- a/style.css
+++ b/style.css
@@ -254,6 +254,7 @@ header {
     height: 70px;
     z-index: 50;
     background-color: white;
+    transition: 0.5s;
 
     .content {
         position: relative;
@@ -1375,4 +1376,25 @@ footer {
     flex-direction: column;
     align-items: center;
     gap: 15px;
+}
+
+.about-us {
+    padding: 0px 200px;
+    ol {
+        list-style: none;
+    }
+    h1 {
+        font-size: 30px;
+        margin-top: 30px;
+        margin-bottom: 10px;
+    }
+    h2 {
+        font-size: 20px;
+        margin-bottom: 8px;
+        margin-top: 20px;
+    }
+    p {
+        font-size: 15px;
+        margin-bottom: 12px;
+    }
 }
