--- a/style.css
+++ b/style.css
@@ -1017,6 +1017,7 @@ header.hide {
 
                 p {
                     font-size: 16px;
+                    color: black;
                 }
 
                 span {
