--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 html,
 body {
     width: 100%;
-    height: 100%;
 }
 
 body {
@@ -53,7 +52,7 @@ section {
     height: 100%;
     background-color: #111;
     opacity: 0.4;
-    z-index: 9;
+    z-index: 20;
     cursor: pointer;
 }
 
@@ -254,13 +253,13 @@ header {
     height: 70px;
     z-index: 50;
     background-color: white;
-    transition: 0.5s;
+    transition: transform 0.5s, padding-right 0s;
 
     .content {
         position: relative;
         width: 100%;
         height: 100%;
-        max-width: 1300px;
+        max-width: 1360px;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -268,6 +267,7 @@ header {
         background-color: white;
         visibility: visible;
         opacity: 1;
+        padding: 0px 30px;
 
         nav {
             left: 50px;
@@ -483,25 +483,9 @@ header.search {
         opacity: 1;
         z-index: 99;
     }
-
-    nav {
-        opacity: 0;
-        pointer-events: none;
-    }
-
-    .header-buttons {
-        opacity: 0;
-        pointer-events: none;
-    }
 }
 
 header.filters-opened {
-    .search-wrapper {
-        transform: translateY(0%);
-        opacity: 0;
-        z-index: 1;
-    }
-
     nav {
         opacity: 0;
         pointer-events: none;
@@ -540,7 +524,7 @@ header.hide {
     width: 100%;
     max-width: unset;
     position: relative;
-    height: 80vh;
+    height: 600px;
     background-image: url('https://th.hashtaglegend.com/th-storage/uploads/posts/2025/06/09/01JX9G9XAMMBXHY3GKHWHRVC2V.jpeg');
     background-position: center;
     background-position-y: bottom;
@@ -557,7 +541,7 @@ header.hide {
         height: 100%;
         position: absolute;
         background-color: #111;
-        opacity: 0.6;
+        opacity: 0.7;
         z-index: -1;
     }
 
@@ -945,7 +929,7 @@ header.hide {
     z-index: 3;
 }
 
-.filters {
+.mobile-menu {
     position: fixed;
     top: 0px;
     left: 0px;
@@ -1152,7 +1136,7 @@ header.hide {
     transform: rotate(45deg);
 }
 
-.filters.active {
+.mobile-menu.active {
     transform: translateX(0%);
 }
 
