--- a/style.css
+++ b/style.css
@@ -356,6 +356,25 @@ header {
         .dropdown:hover .dropdown-menu {
             display: flex;
         }
+
+        .hamburger {
+            width: 30px;
+            height: 20px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            cursor: pointer;
+            background: transparent;
+            border: none;
+        }
+
+        .hamburger span {
+            display: block;
+            height: 3px;
+            background-color: black;
+            border-radius: 1.5px;
+        }
+
     }
 
     .header-buttons {
@@ -945,7 +964,7 @@ header.hide {
 }
 
 
-.filters-wrap-title {
+.menu-wrap-title {
     display: flex;
     justify-content: space-between;
     background-color: #e1e1e1;
@@ -974,15 +993,14 @@ header.hide {
     }
 }
 
-.filters-wrap {
+.menu-wrap {
     position: relative;
     padding: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 
-    .filters-btns-wrap {
-        .filters-wrap-button {
+    .menu-wrap-button {
             display: flex;
             align-items: center;
             width: 100%;
@@ -992,6 +1010,7 @@ header.hide {
             background: transparent;
             cursor: pointer;
             padding: 20px 0px 10px 0px;
+            text-decoration: none;
 
             div {
                 display: flex;
@@ -1015,7 +1034,6 @@ header.hide {
                 transform: rotate(-90deg);
             }
         }
-    }
 
     .filters-btns {
         display: flex;
@@ -1365,19 +1383,23 @@ footer {
 
 .about-us {
     padding: 0px 200px;
+
     ol {
         list-style: none;
     }
+
     h1 {
         font-size: 30px;
         margin-top: 30px;
         margin-bottom: 10px;
     }
+
     h2 {
         font-size: 20px;
         margin-bottom: 8px;
         margin-top: 20px;
     }
+
     p {
         font-size: 15px;
         margin-bottom: 12px;
