--- a/style.css
+++ b/style.css
@@ -370,6 +370,7 @@ header {
 
         .hamburger span {
             display: block;
+            width: 100%;
             height: 3px;
             background-color: black;
             border-radius: 1.5px;
