--- a/style.css
+++ b/style.css
@@ -360,7 +360,7 @@ header {
         .hamburger {
             width: 30px;
             height: 20px;
-            display: flex;
+            display: none;
             flex-direction: column;
             justify-content: space-between;
             cursor: pointer;
@@ -1002,39 +1002,39 @@ header.hide {
     justify-content: space-between;
 
     .menu-wrap-button {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        justify-content: space-between;
+        border: none;
+        border-bottom: 1px solid var(--light-grey);
+        background: transparent;
+        cursor: pointer;
+        padding: 20px 0px 10px 0px;
+        text-decoration: none;
+
+        div {
             display: flex;
-            align-items: center;
-            width: 100%;
-            justify-content: space-between;
-            border: none;
-            border-bottom: 1px solid var(--light-grey);
-            background: transparent;
-            cursor: pointer;
-            padding: 20px 0px 10px 0px;
-            text-decoration: none;
+            flex-direction: column;
+            align-items: start;
+            gap: 5px;
 
-            div {
-                display: flex;
-                flex-direction: column;
-                align-items: start;
-                gap: 5px;
-
-                p {
-                    font-size: 16px;
-                    color: black;
-                }
-
-                span {
-                    font-size: 14px;
-                    margin-bottom: 5px;
-                }
+            p {
+                font-size: 16px;
+                color: black;
             }
 
-            img {
-                width: 20px;
-                transform: rotate(-90deg);
+            span {
+                font-size: 14px;
+                margin-bottom: 5px;
             }
         }
+
+        img {
+            width: 20px;
+            transform: rotate(-90deg);
+        }
+    }
 
     .filters-btns {
         display: flex;
@@ -1405,4 +1405,19 @@ footer {
         font-size: 15px;
         margin-bottom: 12px;
     }
+}
+
+@media (max-width: 1100px) {
+    header {
+        .content {
+            .hamburger {
+                display: flex;
+            }
+            nav {
+                display: none;
+            }
+        }
+
+    }
+
 }
