--- a/style.css
+++ b/style.css
@@ -604,9 +604,10 @@ header.hide {
     .desired-categories-wrap {
         display: flex;
         gap: 60px;
+        flex-wrap: wrap;
+        justify-content: center;
 
         a {
-            margin: 30px 0px 20px 0px;
             display: flex;
             flex-direction: column;
             position: relative;
@@ -956,7 +957,7 @@ header.hide {
     z-index: 99;
     background-color: white;
     width: 400px;
-    height: 100vh;
+    height: 100%;
     overflow-y: auto;
     transform: translateX(-100%);
     transition: 0.5s ease-in-out;
@@ -1283,8 +1284,12 @@ footer {
         max-width: 1300px;
         width: 100%;
         padding: 50px 100px;
+        gap: 100px;
 
         .icons {
+            display: flex;
+            flex-direction: column;
+
             .kirito-logo {
                 filter: brightness(0) invert(1);
                 width: 70px;
@@ -1318,23 +1323,29 @@ footer {
             }
         }
 
-        .info {
+        .footer-info-wrap {
+            width: 100%;
             display: flex;
-            flex-direction: column;
-            gap: 10px;
+            gap: 30px;
+            justify-content: space-between;
+            .info {
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
 
-            h4 {
-                color: white;
-                font-size: 18px;
-            }
+                h4 {
+                    color: white;
+                    font-size: 18px;
+                }
 
-            a {
-                color: white;
-                text-decoration: none;
-                font-weight: 300;
+                a {
+                    color: white;
+                    text-decoration: none;
+                    font-weight: 300;
 
-                &:hover {
-                    text-decoration: underline;
+                    &:hover {
+                        text-decoration: underline;
+                    }
                 }
             }
         }
@@ -1413,11 +1424,69 @@ footer {
             .hamburger {
                 display: flex;
             }
+
             nav {
                 display: none;
             }
+            .header-buttons {
+                .dropdown {
+                    display: none;
+                }
+            }
         }
-
     }
 
+    section {
+        padding: 0px 50px;
+    }
+
+}
+
+@media (max-width: 870px) {
+    footer {
+        .footer-wrapper {
+            flex-wrap: wrap;
+            gap: 50px;
+
+            .icons {
+                width: 100%;
+            }
+
+            .icons,
+            .info {
+                align-items: center;
+            }
+
+            .footer-info-wrap {
+                text-align: center;
+            }
+        }
+    }
+}
+
+@media (max-width: 600px) {
+    footer {
+        .footer-wrapper {
+            .footer-info-wrap {
+                flex-wrap: wrap;
+                .info {
+                    flex: 0 0 calc(50% - 30px); /* половина ширины минус половина gap */
+                    box-sizing: border-box;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 509px) {
+    footer {
+        .footer-wrapper {
+            .footer-info-wrap {
+                flex-wrap: wrap;
+                .info {
+                    flex: 0 0 100%; /* половина ширины минус половина gap */
+                }
+            }
+        }
+    }
 }
