--- a/style.css
+++ b/style.css
@@ -1328,6 +1328,7 @@ footer {
             display: flex;
             gap: 30px;
             justify-content: space-between;
+
             .info {
                 display: flex;
                 flex-direction: column;
@@ -1428,6 +1429,7 @@ footer {
             nav {
                 display: none;
             }
+
             .header-buttons {
                 .dropdown {
                     display: none;
@@ -1467,10 +1469,13 @@ footer {
 @media (max-width: 600px) {
     footer {
         .footer-wrapper {
+            padding: 70px 40px;
+
             .footer-info-wrap {
                 flex-wrap: wrap;
+
                 .info {
-                    flex: 0 0 calc(50% - 30px); /* половина ширины минус половина gap */
+                    flex: 0 0 calc(50% - 30px);
                     box-sizing: border-box;
                 }
             }
@@ -1481,12 +1486,72 @@ footer {
 @media (max-width: 509px) {
     footer {
         .footer-wrapper {
+            padding: 50px 10px;
             .footer-info-wrap {
-                flex-wrap: wrap;
+                gap: 0px;
+                overflow: hidden;
+
                 .info {
-                    flex: 0 0 100%; /* половина ширины минус половина gap */
+                    width: 100%;
+                    flex: 0 0 100%;
+                    position: relative;
+                    max-height: 60px;
+                    border-top: 1px solid var(--light-grey);
+                    gap: 0px;
+                    align-items: start;
+                }
+
+                .info:last-child {
+                    border-bottom: 1px solid var(--light-grey);
+                }
+
+                .info .noto-sans-dd-title {
+                    cursor: pointer;
+                    position: relative;
+                    margin: 16px 6px;
+                }
+
+                .info::after {
+                    content: '';
+                    position: absolute;
+                    top: 16px;
+                    right: 0;
+                    width: 16px;
+                    height: 16px;
+                    background-image: url('/img/arrow.svg');
+                    background-repeat: no-repeat;
+                    background-size: contain;
+                    transition: transform 0.3s ease;
+                    top: 16px;
+                    transform: rotate(-90deg);
+                    filter: invert(1);
+                }
+
+                .info.open::after {
+                    transform: rotate(0deg);
+                }
+
+                .noto-sans-dd-title {
+                    cursor: pointer;
+                }
+
+                .info a {
+                    overflow: hidden;
+                    display: block;
+                    margin-bottom: 10px;
+                    margin-left: 6px;
+                }
+
+                .info a:nth-child(1) {
+                    margin-bottom: 10px;
+                }
+
+                .info.open {
+                    max-height: 3000px;
+                    padding-bottom: 10px;
                 }
             }
+
         }
     }
 }
