--- a/style.css
+++ b/style.css
@@ -899,8 +899,7 @@ header.hide {
 
 .double-range-slider {
     position: relative;
-    width: 70%;
-    /* или нужная ширина */
+    width: 85%;
     height: 30px;
     margin: 20px 0;
     margin: 0 auto;
@@ -913,7 +912,7 @@ header.hide {
     top: 50%;
     left: 0;
     right: 0;
-    height: 6px;
+    height: 3px;
     background: #ddd;
     /* светлый фон */
     border-radius: 3px;
@@ -925,7 +924,7 @@ header.hide {
 .slider-range {
     position: absolute;
     top: 50%;
-    height: 6px;
+    height: 3px;
     background: #000000;
     /* цвет выделенного диапазона */
     border-radius: 3px;
@@ -959,7 +958,7 @@ header.hide {
     height: 100%;
     overflow-y: auto;
     transform: translateX(-100%);
-    transition: 0.5s ease-in-out;
+    transition: 0.4s ease-in-out;
     display: flex;
     flex-direction: column;
 }
@@ -1068,7 +1067,6 @@ header.hide {
             }
         }
     }
-
 }
 
 .filter-group {
@@ -1082,7 +1080,7 @@ header.hide {
     height: 100vh;
     overflow-y: auto;
     z-index: 100;
-    transition: 0.5s ease-in-out;
+    transition: 0.4s ease-in-out;
     overflow-x: hidden;
     padding-bottom: 20px;
 }
@@ -1097,9 +1095,9 @@ header.hide {
 
 .apply-filter-btn {
     display: flex;
-    width: 150px;
-    height: 40px;
-    border-radius: 5px;
+    width: calc(100% - 40px);
+    padding: 14px;
+    border-radius: 6px;
     align-items: center;
     justify-content: center;
     margin: 0 auto;
@@ -1185,10 +1183,6 @@ header.hide {
             height: 100%;
         }
 
-        p {
-            font-size: 15px;
-        }
-
         div {
             display: none;
             justify-content: center;
@@ -1211,7 +1205,6 @@ header.hide {
 
     .custom-select {
         position: relative;
-        width: 200px;
         cursor: pointer;
         user-select: none;
     }
@@ -1221,6 +1214,7 @@ header.hide {
         justify-content: space-between;
         padding: 10px;
         background-color: white;
+        gap: 8px;
 
         img {
             width: 20px;
@@ -1228,6 +1222,7 @@ header.hide {
     }
 
     .options-list {
+        display: none;
         position: absolute;
         top: 100%;
         left: 0;
@@ -1247,10 +1242,10 @@ header.hide {
         }
     }
 
-    #sort-price:hover .options-list {
-        display: block !important;
-    }
 
+    #sort-price.hovering .options-list {
+        display: block;
+    }
 
 }
 
@@ -1263,11 +1258,31 @@ header.hide {
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    margin-top: 20px;
+    margin-top: 25px;
 
     .outfit-item-title {
         font-size: 20px;
         font-weight: 550;
+    }
+
+    .price-filter-wrap {
+        display: flex;
+        justify-content: center;
+        gap: 40px;
+        width: 85%;
+
+        div {
+            display: flex;
+            align-items: center;
+            padding-bottom: 10px;
+            justify-content: space-between;
+            flex: 0 0 calc(50% - 20px);
+            border-bottom: 1px solid black;
+
+            span {
+                font-weight: 500;
+            }
+        }
     }
 }
 
@@ -1550,7 +1565,8 @@ footer {
     :root {
         --orbitron-h1: 40px;
         --noto-sans-header: 15px;
-        --noto-sans-h2: 20px;
+        --noto-sans-h2: 25px;
+        --noto-sans-dd: 13px;
     }
 
     footer {
@@ -1651,5 +1667,69 @@ footer {
                 transform: scale(1.1);
             }
         }
+    }
+
+    .filters-header {
+        border: 0;
+        gap: 14px;
+        justify-content: center;
+        height: 80px;
+
+        .filters-button {
+            border-radius: 10px;
+            height: 100%;
+            background-color: black;
+            flex: 0 0 calc(50% - 7px);
+            padding: 15px 15px;
+
+            img {
+                filter: invert(1);
+            }
+
+            p {
+                color: white;
+            }
+
+            #filters-button-amount {
+                background-color: white;
+                color: black;
+            }
+        }
+
+        .custom-select {
+            flex: 0 0 calc(50% - 7px);
+            height: 100%;
+
+            .selected-option {
+                height: 100%;
+                border-radius: 10px;
+                border: 1px solid black;
+                align-items: center;
+                padding: 10px 15px;
+
+                img {
+                    width: 15px;
+                    height: 15px;
+                }
+            }
+        }
+    }
+
+    .catalog {
+        margin-top: 40px;
+    }
+
+    .menu-wrap {
+        .filters-btns {
+            #reset-filters {
+                padding: 0px;
+                width: 100%;
+                border: 1px solid black;
+                text-decoration: none;
+                padding: 10px;
+                border-radius: 5px;
+            }
+        }
+
     }
 }
