--- a/style.css
+++ b/style.css
@@ -1691,7 +1691,8 @@ footer {
         border: 0;
         gap: 14px;
         justify-content: center;
-        height: 80px;
+        height: 50px;
+        padding: 0;
 
         .filters-button {
             border-radius: 10px;
@@ -1734,7 +1735,7 @@ footer {
     }
 
     .catalog {
-        margin-top: 40px;
+        margin-top: 30px;
     }
 
     .menu-wrap {
