--- a/style.css
+++ b/style.css
@@ -1078,7 +1078,7 @@ header.hide {
     position: fixed;
     width: 80%;
     max-width: 400px;
-    height: 100vh;
+    height: 100%;
     overflow-y: auto;
     z-index: 100;
     transition: 0.4s ease-in-out;
