--- a/style.css
+++ b/style.css
@@ -1027,6 +1027,7 @@ header.hide {
             span {
                 font-size: 14px;
                 margin-bottom: 5px;
+                text-align: left;
             }
         }
 
