--- a/style.css
+++ b/style.css
@@ -804,6 +804,7 @@ header.hide {
     .swiper-slide {
         width: 100%;
         flex-shrink: 0;
+        overflow: hidden;
     }
 
     .swiper-slide img {
@@ -811,7 +812,8 @@ header.hide {
         height: auto;
         object-fit: cover;
         display: block;
-        transform: scale(1.2);
+        transform: scale(1.4);
+        overflow: hidden;
     }
 
     .swiper-button-next,
@@ -824,6 +826,14 @@ header.hide {
         /* или свой цвет */
     }
 
+    .swiper-button-prev {
+        left: 0;
+    }
+
+    .swiper-button-next {
+        right: 0;
+    }
+
     /* Опционально — уменьшить иконки внутри */
     .swiper-button-next::after,
     .swiper-button-prev::after {
@@ -833,6 +843,8 @@ header.hide {
 
     .swiper-pagination-bullet {
         background: #000;
+        width: 5px;
+        height: 5px;
     }
 
     .swiper-pagination {
@@ -864,6 +876,7 @@ header.hide {
             margin-top: 50px;
             width: 100%;
             height: 300px;
+            max-height: fit-content;
 
             .item-details {
                 position: relative;
@@ -1669,8 +1682,13 @@ footer {
         align-items: center;
 
         .item-img-wrap {
-            width: 80%;
+            width: 100%;
             aspect-ratio: 1 / 1;
+        }
+
+        .item-info-wrap {
+            width: 100%;
+            padding: 30px 10px;
         }
     }
 }
