--- a/style.css
+++ b/style.css
@@ -1678,7 +1678,7 @@ footer {
 
 @media (max-width: 1000px) {
     .item {
-        margin-top: 0;
+        margin-top: 0px;
         flex-direction: column;
         align-items: center;
 
