product page fix

--- a/style.css
+++ b/style.css
@@ -1802,6 +1802,7 @@ footer {
         --noto-sans-header: 15px;
         --noto-sans-h2: 25px;
         --noto-sans-dd: 13px;
+        --clash-grotesk-item-title: 25px;
     }
 
     footer {
